Build and train TF model

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -398,6 +398,185 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build and train a TF model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use sklearn to split data\n",
+    "x_train, x_test, y_train, y_test = train_test_split(data, labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build and train the model\n",
+    "model = Sequential([\n",
+    "    Dense(64, activation='relu', input_shape=(len(x_train.iloc[0]),)),\n",
+    "    Dense(32, activation='relu'),\n",
+    "    Dense(1)]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Network.summary of <tensorflow.python.keras.engine.sequential.Sequential object at 0x7faf9c271ad0>>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.compile(optimizer=tf.keras.optimizers.RMSprop(),\n",
+    "             loss=tf.keras.losses.MeanSquaredError(),\n",
+    "             metrics=['mae','mse'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense (Dense)                (None, 64)                320       \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 32)                2080      \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 1)                 33        \n",
+      "=================================================================\n",
+      "Total params: 2,433\n",
+      "Trainable params: 2,433\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 12600 samples, validate on 2224 samples\n",
+      "Epoch 1/10\n",
+      "12600/12600 [==============================] - 3s 257us/sample - loss: 1.5554 - mae: 0.9731 - mse: 1.5554 - val_loss: 1.2581 - val_mae: 0.8687 - val_mse: 1.2581\n",
+      "Epoch 2/10\n",
+      "12600/12600 [==============================] - 2s 162us/sample - loss: 1.3995 - mae: 0.9236 - mse: 1.3995 - val_loss: 1.3728 - val_mae: 0.9144 - val_mse: 1.3728\n",
+      "Epoch 3/10\n",
+      "12600/12600 [==============================] - 2s 138us/sample - loss: 1.3175 - mae: 0.8917 - mse: 1.3175 - val_loss: 1.2853 - val_mae: 0.8796 - val_mse: 1.2853\n",
+      "Epoch 4/10\n",
+      "12600/12600 [==============================] - 2s 146us/sample - loss: 1.2898 - mae: 0.8830 - mse: 1.2898 - val_loss: 1.5192 - val_mae: 0.9702 - val_mse: 1.5192\n",
+      "Epoch 5/10\n",
+      "12600/12600 [==============================] - 2s 152us/sample - loss: 1.2660 - mae: 0.8760 - mse: 1.2660 - val_loss: 1.4345 - val_mae: 0.9371 - val_mse: 1.4345\n",
+      "Epoch 6/10\n",
+      "12600/12600 [==============================] - 2s 159us/sample - loss: 1.2437 - mae: 0.8677 - mse: 1.2437 - val_loss: 1.2084 - val_mae: 0.8496 - val_mse: 1.2084\n",
+      "Epoch 7/10\n",
+      "12600/12600 [==============================] - 2s 147us/sample - loss: 1.2391 - mae: 0.8649 - mse: 1.2391 - val_loss: 1.2018 - val_mae: 0.8465 - val_mse: 1.2018\n",
+      "Epoch 8/10\n",
+      "12600/12600 [==============================] - 2s 163us/sample - loss: 1.2321 - mae: 0.8619 - mse: 1.2321 - val_loss: 1.2281 - val_mae: 0.8574 - val_mse: 1.2281\n",
+      "Epoch 9/10\n",
+      "12600/12600 [==============================] - 2s 148us/sample - loss: 1.2253 - mae: 0.8611 - mse: 1.2253 - val_loss: 1.1968 - val_mae: 0.8451 - val_mse: 1.1968\n",
+      "Epoch 10/10\n",
+      "12600/12600 [==============================] - 2s 154us/sample - loss: 1.2187 - mae: 0.8572 - mse: 1.2187 - val_loss: 1.1990 - val_mae: 0.8463 - val_mse: 1.1990\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x7faf34b49290>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(x_train, y_train, epochs=10, validation_split=0.15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate predictions on test examples\n",
+    "num_examples = 10\n",
+    "predictions = model.predict(x_test[:num_examples])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted val:  7.51305\n",
+      "Actual val:  9.105091420599999\n",
+      "Predicted val:  7.269867\n",
+      "Actual val:  6.75055446244\n",
+      "Predicted val:  5.629475\n",
+      "Actual val:  7.7492485093\n",
+      "Predicted val:  6.92276\n",
+      "Actual val:  6.9996768185\n",
+      "Predicted val:  7.2285867\n",
+      "Actual val:  6.97542596968\n",
+      "Predicted val:  8.062556\n",
+      "Actual val:  7.31273323054\n",
+      "Predicted val:  7.501497\n",
+      "Actual val:  7.43839671988\n",
+      "Predicted val:  8.027619\n",
+      "Actual val:  6.75055446244\n",
+      "Predicted val:  7.503191\n",
+      "Actual val:  7.1760466281\n",
+      "Predicted val:  8.47601\n",
+      "Actual val:  8.56275425608\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(num_examples):\n",
+    "    print('Predicted val: ', predictions[i][0])\n",
+    "    print('Actual val: ',y_test.iloc[i])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
