--- a/demo.ipynb
+++ b/demo.ipynb
@@ -577,6 +577,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using the What-if-Tool (WIT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wit_data = pd.concat([x_test, y_test], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def custom_predict(examples_to_infer):\n",
+    "    preds = model.predict(examples_to_infer)\n",
+    "    return preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4badf95ccdc9492aa3db090cee5e62de",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "WitWidget(config={'model_type': 'regression', 'label_vocab': [], 'feature_names': ['is_male', 'mother_age', 'p…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Instatiate the WIT\n",
+    "config_builder = (WitConfigBuilder(wit_data[:500].values.tolist(), data.columns.tolist() + ['weight_pounds'])\n",
+    "                 .set_custom_predict_fn(custom_predict)\n",
+    "                 .set_target_feature('weight_pounds')\n",
+    "                 .set_model_type('regression'))\n",
+    "\n",
+    "WitWidget(config_builder, height=800)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
